# ChangeLog for app-portage/pfl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/pfl/ChangeLog,v 1.45 2012/08/05 14:09:15 ryao Exp $

  05 Aug 2012; Richard Yao <ryao@gentoo.org> pfl-2.3-r1.ebuild:
  Keyword ~x64-freebsd

  26 Jul 2012; Richard Yao <ryao@gentoo.org> pfl-2.3-r1.ebuild:
  Keyword ~amd64-fbsd

  06 May 2012; Daniel Pielmeier <billie@gentoo.org> -pfl-2.2.ebuild:
  Remove old.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> pfl-2.3.ebuild:
  sparc stable wrt #399951

  14 Mar 2012; Jeroen Roovers <jer@gentoo.org> pfl-2.3-r1.ebuild:
  Marked ~hppa too.

*pfl-2.3-r1 (13 Feb 2012)

  13 Feb 2012; Daniel Pielmeier <billie@gentoo.org> +pfl-2.3-r1.ebuild:
  Use tarball and distutils setup script instead of messing with single files.

  05 Feb 2012; Markus Meier <maekke@gentoo.org> pfl-2.3.ebuild:
  arm stable, bug #399951

  01 Feb 2012; Brent Baude <ranger@gentoo.org> pfl-2.3.ebuild:
  Marking pfl-2.3 ppc for bug 399951

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pfl-2.3.ebuild:
  x86 stable wrt bug #399951

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> pfl-2.3.ebuild:
  Stable for amd64, wrt bug #399951

  03 Dec 2011; Fabian Groffen <grobian@gentoo.org> pfl-2.3.ebuild:
  Add fixes for Prefix

  06 Nov 2011; Brent Baude <ranger@gentoo.org> pfl-2.2.ebuild:
  Marking pfl-2.2 ppc for bug 370855

*pfl-2.3 (19 Oct 2011)

  19 Oct 2011; Daniel Pielmeier <billie@gentoo.org> +pfl-2.3.ebuild:
  Version bump. Fixes bug #381399 and #381403. Thanks to Michał Górny for the
  reports.

  26 Jul 2011; Daniel Pielmeier <billie@gentoo.org> -pfl-2.1.ebuild:
  Remove old.

  25 Jun 2011; Raúl Porcel <armin76@gentoo.org> pfl-2.2.ebuild:
  sparc stable wrt #370855

  19 Jun 2011; Markus Meier <maekke@gentoo.org> pfl-2.2.ebuild:
  x86 stable, bug #370855

  19 Jun 2011; Markus Meier <maekke@gentoo.org> pfl-2.2.ebuild:
  arm stable, bug #370855
