@@ -1,7 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST e-file-20110906 2974 SHA256 bb79a48fb495f7cd4e9934bed2bccce818bbef5bc90cfb8a569568344dc8a241 SHA512 a5d0cb46b19f734e5b330f1fe2cf8e532bf786c39da74031e5a8497a5f0f3b35139795ef27cf0c030a6957645afe0536dab47f9e3283c0f803f24942d7ed929a WHIRLPOOL 63a79476c43fee9cdb5175d556788e42ac626a2cc0385a06f659a89633745374e10ac3c84437748cd89732d73bebb40fe753659756f7eb7a168621dd4d7494d2
 DIST pfl-2.3 14060 SHA256 7f7f95173e3c2203a9b585572a3898f9ccf2bfee9d167c76705ad816e253b4d6 SHA512 ecd76a1beee3608e395c925f469509d4cd0fb974e91cd5f388cf0fc2fe645287977c357221aa11bf02362a7962401ac7ba1654af8d63bf9249892d982b8c978e WHIRLPOOL 97965c46a8f5b0497fcaae9fc1abef4c0763ad622def7d2db0d5472be7d63d8a9b7f02cd48ccf10fa6bdadb5817ca84bef0c6a4522549f07c0c00be870ed633b
 DIST pfl-2.3.tar.bz2 6481 SHA256 40f9b5846abd561089a1cb80662d51ca49364353398407f4f1c74437281b8a6a SHA512 42721a79ea001c8dc571d4ae1d0dde4dce22bd0c177e0c984ec2daa1d01838e8d48943bd94ab6f4652b00bb4ab40594bfda6fab04cc62d2447fb603d4ec7ee05 WHIRLPOOL a2ac419ed7466a306f9cd7c3df824d2af90175661bb27b703501b07a27d5d2752a1fc85b2b77781a10778ac5eb894a5a68e5f46bbf57b4f3091154178ccbec7c
-EBUILD pfl-2.3-r1.ebuild 1120 SHA256 249de4e8299f1bd761bee7502e0e108ddacff48dd5697a24eeeb7853c8627e7e SHA512 122a4731ef0e7cdb30f9c11eca7cf51bdc502ab3ceedbe6bbd95fa6d666fe63b2aa7ea00c9299d07f36d9bce71f69da2e737dd1197b4eb8af5af3bc06186b712 WHIRLPOOL dd9d8e62057daef2d24ee497fc9186300ccaa5b6a30823e863de2c0c875fc2ecd7c515f7aeda9be3454ed118faa8011bf305eb8d1afa1045633f548ec4ad32fe
-EBUILD pfl-2.3.ebuild 1682 SHA256 963b2cee188366b7be27a3670f5cd0701d3e2dc962d763d1c81d902abd983187 SHA512 908473287b6530f5205f1aae9185b4b09a9b6a8134fca077e58bbb7056dcfbb8c13a649340c2bafbfddefe803aaa6c5fbd9ce542f920653ae1896adab4ec511e WHIRLPOOL aff7b1fc478d3d65c0557dfbcb32b1b52ebad1c3f89c1c1ecb7d4666aceeb09fa234d7926aa8ef18b5fbd98655f1936ca511c4735cadf8819752f2bb5ac8a695
-MISC ChangeLog 5648 SHA256 fbcd2ce4667b33d0afcff7f745032db2adbf7e2a1fc0c23e7e46d8b912283abd SHA512 bcf875d9d101accdbfc07c60e79b5ab462e229e3207385838380ea16829490498857f75ef318c24f01a8513b2e2f235a7e71e3817df3c10cadfa81a6db045b97 WHIRLPOOL 74f69bda688d68e8bf6c00d47b263fe08984cdc26800d388d114df5b4827a189e2cb8de7d792ce05fee14e4f7d63a9d4ce4d93aaf6bd284392d76038a4f982f3
+EBUILD pfl-2.3-r1.ebuild 1122 SHA256 4329a0bfbce97a4e7f863df6450a2de3b08af519e4d369f7ac9048f4d673323e SHA512 0b224b8d0f6ca87db5d06ac64890ed31fbc935843cd0b9749130f3271f1890c53e7ca46cbe01fe806c66e50f342dfcf6101990f73e0c07d35b8a9fc4510135df WHIRLPOOL 8e8eec4364854cc06bc2cc40ff51412334671afa736e5089145819dde5918b66c29d2eb59e86df4126d013df26d04e878e1ee69fa00bd32d5a3e1b14a61da646
+EBUILD pfl-2.3-r2.ebuild 1004 SHA256 8956a79edb36a116a8fa07c01284029bd3e58041b3651d38581df95902ee4ef2 SHA512 90c6d039d068fa06605a88db1ae6d676daaccf9c38a8892f2b47d77ca7b6196d3987a987b839d205971ec16e2c32303db03d2801cac3947e9a4c08055b9a11b9 WHIRLPOOL 35455ff62d3d7a6a35e5695e875fccbe0d0fe7dd0281ee07c5fe2379b994a3c81fed2cb13b8ea44560f025d104a9ceeb94731839e82589c26d31f68f49d62ac4
+EBUILD pfl-2.3.ebuild 1681 SHA256 11e529cd184fa745eea14a4904ab504436b24c582147f838cf4e0ed92d32ca4d SHA512 a88f1fa815eba52883bb38457192aa65d338479ae02a1f67219e484e9e2c53e347e4a6a67e148f36e45f9dbdeacd07ffba17c750f8c07e6f4972413a2062d351 WHIRLPOOL 4b63cce27defb3e1de510ee8bcae860c98a8d2b6997fe4e46e1494d22ef05063a97edfeb2c4164cfa2a7a332c52ecf19f3e2df40566e1600d148097f14d12a3a
+MISC ChangeLog 5801 SHA256 5cc840ca0e3d06ad334b94dbe3b62f561d6c1829f099cf426165a3f49b3cc2e2 SHA512 6289cf37e22d375adfce29140172ed985fcd928651075ba2588a745d29637809462f2f3309bba78ff2fd1c3067374de40f6d5c3f899169f17e5601228f264a6b WHIRLPOOL 1bb06a3653b62acf8804595fddb596cd28f29a1579c2e6e63632a6f4c78119787c32f02e44dda541843e7ee6732b5987339a36b7cc4df0c9c6fe205281056a39
 MISC metadata.xml 486 SHA256 6df52c4b73bf5cb60d069fd6f572f34b38763e2802ec4d598e2d762d56f082a4 SHA512 5016cceff08df6d737fd962084ca8de4d155b6dba4da81f1253bdea583d39a904657dc675af483ee930aaa6373fbd4e315712b55d9cfde4282b02b946140d24c WHIRLPOOL bfa6fb3afbd4667a328193a42efd8e23be38fb5c74ebaff46181c350f0b721b6634211894b0d9c3719bd4c91cf002df38b3dff87153882593e396f8ce3f51490
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlENCSYACgkQlcuUeyFa0U0cqwCgobEbFpC4WLnb/T+p3W9sJ/vZ
+KOMAn3OHgJY2kRZxl1m+YojtpI/phleR
+=MMLU
+-----END PGP SIGNATURE-----
